Introduce pending phase in UI

--- a/src/app/shared/styles/elements/utils.scss
+++ b/src/app/shared/styles/elements/utils.scss
@@ -21,6 +21,10 @@
         color: $argo-running-color;
     }
 
+    &--pending {
+        color: $argo-init-color;
+    }
+
     &--init {
         color: $argo-init-color;
     }
